[package]
name = "coa"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.84.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
axum = "0.6.20"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "3.4.4", features = ["axum_extras"] }
serde_json = "1.0.104"
serde = "1.0.182"

[[bin]]
name = "analyzer"
path = "src/analyzer/main.rs"

[[bin]]
name = "apiservice"
path = "src/apiservice/main.rs"
