[package]
name = "coa"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.84.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "3.4.4", features = ["axum_extras", "debug", "openapi_extensions"] }
serde_json = "1.0.104"
serde = "1.0.182"
utoipa-redoc = { version = "0.1", features = ["axum"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
hyper = "0.14.27"
deadpool-postgres = "0.10.5"
tokio-postgres = { version = "0.7.8", features = ["with-uuid-0_8", "with-uuid-1"] }
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
log = "0.4.19"
std-logger = "0.5.2"

[[bin]]
name = "analyzer"
path = "src/analyzer/main.rs"

[[bin]]
name = "apiservice"
path = "src/apiservice/main.rs"
